Updated OpenJDK sources to JDK 11.
PiperOrigin-RevId: 291375208